WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172528
We should not mmap zero bytes for a memory in Wasm
https://bugs.webkit.org/show_bug.cgi?id=172528
Summary
We should not mmap zero bytes for a memory in Wasm
Saam Barati
Reported
2017-05-23 15:47:47 PDT
...
Attachments
patch
(3.99 KB, patch)
2017-05-23 16:09 PDT
,
Saam Barati
mark.lam
: review+
Details
Formatted Diff
Diff
patch for landing
(3.97 KB, patch)
2017-05-23 16:53 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2017-05-23 16:04:03 PDT
<
rdar://problem/32257076
>
Saam Barati
Comment 2
2017-05-23 16:09:27 PDT
Created
attachment 311069
[details]
patch
Build Bot
Comment 3
2017-05-23 16:11:07 PDT
Attachment 311069
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Lam
Comment 4
2017-05-23 16:11:23 PDT
Comment on
attachment 311069
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=311069&action=review
r=me
> Source/JavaScriptCore/ChangeLog:3 > + We should not mmap a zero bytes for a memory in Wasm
I think you should drop the "a" before "zero bytes".
Saam Barati
Comment 5
2017-05-23 16:53:42 PDT
Created
attachment 311075
[details]
patch for landing
WebKit Commit Bot
Comment 6
2017-05-23 17:32:15 PDT
Comment on
attachment 311075
[details]
patch for landing Clearing flags on attachment: 311075 Committed
r217314
: <
http://trac.webkit.org/changeset/217314
>
WebKit Commit Bot
Comment 7
2017-05-23 17:32:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug